# WordFinder

./: .gitignore  CMakeLists.txt  Combinations.cpp  Combinations.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  WordFinder.cfg  WordFinder.cpp  WordFinder.h  WordFinder.pro  cli.cpp
